--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             fill="#ff7aa2"/>
     </svg>
 
-    <h1>nirali will you be my valentine?</h1>
+    <h1>Hi Mr.EJ 😘 Can I take you out for dinner this Valentine's Day</h1>
 
     <section class="button-zone" id="zone">
       <button id="yesBtn">Yes</button>
@@ -300,6 +300,7 @@
   </script>
 </body>
 </html>
+
 
 
 
